--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -24,5 +24,6 @@ auth.password=sentinel
 sentinel.dashboard.version=@project.version@
 
 # sentinel nacos
+sentinel.nacos.serverAddr=192.168.74.132:8848
 sentinel.nacos.namespace=
 sentinel.nacos.group-id=DEFAULT_GROUP
